# dbv

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/skills/release/: SKILL.md
.github/workflows/: ci.yml  docker.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: i18n.ts  index.css  main.tsx
frontend/src/api/: client.ts  mongo.test.ts  mongo.ts
frontend/src/components/: CollectionView.tsx  CommandsView.tsx  DocFormEditor.tsx  DocTreeView.tsx  LanguageSelector.tsx  ProtectedRoute.tsx  SchemaViewer.tsx  ThemeSelector.tsx
frontend/src/context/: AuthContext.tsx  ThemeModeContext.tsx  useThemeMode.ts
frontend/src/locales/: ar.json  da.json  de.json  el.json  en.json  es.json  fr.json  hi.json  it.json  ja.json  ko.json  nl.json  pl.json  pt.json  ru.json  uk.json  ur.json  zh-CN.json
frontend/src/pages/: BrowserPage.tsx  LoginPage.tsx
frontend/src/theme/: appTheme.ts  themeMode.test.ts  themeMode.ts
frontend/src/utils/: bsonFormat.test.ts  bsonFormat.ts  deleteMany.test.ts  deleteMany.ts  monacoTheme.test.ts  monacoTheme.ts  mongoSchema.test.ts  mongoSchema.ts  sqlToMql.test.ts  sqlToMql.ts  updateMany.test.ts  updateMany.ts
kubernetes/helm/dbv/: Chart.yaml  values.yaml
kubernetes/helm/dbv/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  (+4 more)
src/: config.rs  errors.rs  main.rs  openapi.yaml  state.rs
src/auth/: mod.rs  rbac.rs
src/db/: mod.rs
src/routes/: auth_proxy.rs  connection.rs  data.rs  health.rs  mod.rs  openapi.rs  schema.rs  transfer.rs
