[package]
name = "dbv"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

mongodb = { version = "2.8", features = ["tokio-runtime"] }
bson = { version = "2", features = ["chrono-0_4"] }

jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

thiserror = "1"
envy = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
async-trait = "0.1"
anyhow = "1"
