[package]
name = "dbv"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

mongodb = { version = "3" }
bson = { version = "2", features = ["chrono-0_4"] }

jsonwebtoken = { version = "10", features = ["rust_crypto"] }
reqwest = { version = "0.13", features = ["json", "rustls", "form"], default-features = false }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

thiserror = "2"
envy = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
async-trait = "0.1"
anyhow = "1"
